<resources>
    <string name="app_name">SolarControllerProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_control">Controls</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings_screen">Settings</string>

    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="theme_header">Theme</string>

    <!-- Language Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="language_title">Preferred language </string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="communicate">Communicate</string>
    <string name="dark_theme">Dark theme:</string>
    <string name="welcome_text">Welcome to Solar Controller</string>
    <string name="automatic_tracking">Automatic Tracking</string>

    <string name="help_message">The application will give you the power to monitor your solar panels activity.
        It also provide an automatic or manual control to the positioning of your solar panels.
        The controls you see in the control screen adjusts the rotation and tilt of your panels and/or
        enabling the automatic tracking will direct your panels on the best position according to the current position
        of the sun.

        \n\nIf you need any more help, you can contact our customer support email @solarcontrol@humber.ca and telephone #: 416 829 0291.
    </string>

    <string-array name="language_entries">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="language_entries_values">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
