<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.solarcontrollerproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_control"
        android:name="com.example.solarcontrollerproject.ui.control.ControlFragment"
        android:label="@string/menu_control"
        tools:layout="@layout/fragment_controller" />

    <fragment
        android:id="@+id/nav_readings"
        android:name="com.example.solarcontrollerproject.ui.readings.ReadingsFragment"
        android:label="@string/menu_readings"
        tools:layout="@layout/fragment_readings" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.solarcontrollerproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.solarcontrollerproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.solarcontrollerproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>